# teacher-geometry-init

./: .env.example  .gitignore  README.md  pyproject.toml
cluster/: env_bootstrap.sh
experiments/: registry_distill.csv  registry_distill_deprecated.csv
experiments/smoke_data/: train.jsonl
experiments/smoke_data_medium/: eval.jsonl  train.jsonl
sbatchs/: lmic_distill_hydra.submit  lmic_lm_eval_suite.submit
src/distillation/: kld_loss_trainer.py  pca_layerwise_init.py  run_distill.py  student_factory.py  umap_layerwise_init.py
src/experiments/: distill_registry.py  distill_registry_runner.py  lm_eval_runner.py  lm_eval_suite_runner.py  plot_lm_eval_timing.py  prepare_fineweb.py
src/utils/: helper.py  lm_eval_utils.py
